# AlgorithmicTrading

./: .gitignore  README.md
materials/: short.csv
src/: CMakeLists.txt  Makefile  charts.cc  charts.h  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  menus.cc  menus.h  menus.ui
src/latex/: doc.tex
src/libraries/csv/: CMakeLists.txt  file.cc  file.h  reader.h  row.cc  row.h  status.h  utils.h
src/libraries/csv/tests/: csv_file.cc  csv_reader.cc  csv_row.cc
src/libraries/csv/tests/dataset/: valid_short.csv  valid_with_empty_line_non_empty_last_line.csv  valid_with_empty_lines.csv
src/libraries/math/: CMakeLists.txt
src/libraries/math/approximation/: spline_approximation.cc  spline_approximation.h
src/libraries/math/interpolation/: spline_interpolation.cc  spline_interpolation.h
src/libraries/math/tests/: interval.cc
src/libraries/math/utils/: interval.cc  interval.h  point.h  points.h
src/libraries/sle/: CMakeLists.txt  abstract_solver.cc  abstract_solver.h  matrix.cc  matrix.h  parallel_solver.cc  parallel_solver.h  sle.cc  sle.h  solver.cc  solver.h
src/models/: CMakeLists.txt
src/models/function/: CMakeLists.txt  forward_declarations.h  tabulated_function.cc  tabulated_function.h
src/models/include/: function.h  point.h
